# crispr-toolkit

./: .editorconfig  .gitignore  DEVELOPMENT_TASKS.md  LICENSE  MAGECK_INTEGRATION_README.md  PHASE1_COMPLETE.md  PHASE2B_IMPLEMENTATION_STATUS.md  PRIORITY_2_COMPLETION_REPORT.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_phase1.txt  requirements_phase2.txt  run.sh  setup.py  test_clinical_framework.py  test_multi_omics.py  test_phase2b.py  test_senescence_demo.py  validate_mageck_integration.py
.copilot/: README.md  aging-prompts.md  copilot-config.yml
.copilot/prompts/: guide_design.md
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
configs/interventions/: ftl1_brain_knockdown.yaml  osk.yaml
configs/tissues/: brain.yaml  heart.yaml  kidney.yaml  liver.yaml
data/candidates/: ftl1_brain.yaml
docker/: Dockerfile  docker-compose.yml
docs/: CHANGELOG.md  DEVELOPMENT_TASKS.md  ENHANCED_CLEANUP_COMPLETION.md  FILE_ORGANIZATION_SUMMARY.md  PHASE2B_DEVELOPMENT_PLAN.md  PROJECT_ORGANIZATION.md  PROJECT_ORGANIZATION_RULES.md  REORGANIZATION_SUCCESS.md  ROOT_CLEANUP_COMPLETION.md  WORKFLOW.md  aging_use_cases.md  project_plan.md  references.md
docs/completion_reports/: PHASE1_STATUS_UPDATE.md  PHASE2A_COMPLETION_OFFICIAL.md  PHASE3_COMPLETION_SUMMARY.md  PHASE_1_COMPLETION_REPORT.md
docs/reports/: FINAL_COMPLETION_SUMMARY.md  PHASE2B_COMPLETION_SUMMARY.md  SENESCENCE_COMPLETION_REPORT.md
examples/: mageck_screen_analysis.py  phase1_integration_demo.py  phase2_integration_demo.py  phase3_multi_omics_demo.py
notebooks/: phase1_integration_demo.ipynb
phase2_demo_outputs/: Dockerfile  Phase2_Demo_Report_20250820_180736.md  docker-compose.yml
phase2_demo_outputs/kubernetes/: deployment.yaml  service.yaml
phase2_demo_outputs/reproducibility/validation_package_20250820_180736/: validation_report.md
scripts/: setup_aging.sh  test.sh
src/crispr_toolkit/: __init__.py
src/crispr_toolkit/analysis/: __init__.py  literature.py
src/crispr_toolkit/cli/: aging_cli.py  main.py
src/crispr_toolkit/clinical/: __init__.py  adaptive_trials.py  adverse_events.py  biomarkers.py  clinical_translator.py  ehr_integration.py  enhanced_translation.py  stratification.py  translation.py
src/crispr_toolkit/data/: __init__.py  real_datasets.py  training.py
src/crispr_toolkit/deployment/: production.py
src/crispr_toolkit/models/: ensemble_methods.py  experiment_tracking.py  hyperparameter_optimization.py  ml_models.py
src/crispr_toolkit/omics/: __init__.py  cross_omics_correlation.py  epigenomics.py  fusion.py  metabolomics.py  pathway_enrichment.py  proteomics.py  quality_control.py  temporal_modeling.py
tests/: test_mageck_integration.py  test_phase1_integration.py  test_rejuvenation.py  test_target_prioritization.py
tests/clinical/: __init__.py  test_clinical_translator.py  test_clinical_translator_comprehensive.py
tests/demos/: __init__.py  test_multi_omics_demo.py  test_senescence_simple.py
tests/integration/: quick_test.py  test_clinical_framework.py  test_ftl1_pipeline.py  test_mageck_integration.py  test_simple.py
tests/scripts/: final_integration_test.py  final_verification.py  setup.sh  train_aging_models.py  verify_senescence.py
tests/unit/: test_aging_prioritization.py  test_crispri_design_ftl1.py  test_literature_ftl1.py
tests/validation/: test_phase2a_completion.py  validate_mageck_integration.py  validate_phase2a.py
(+34 files in other folders)
